--- a/Lab1/khanacademy/d.CSS text properties/1fancyfontfamilies.html
+++ b/Lab1/khanacademy/d.CSS text properties/1fancyfontfamilies.html
@@ -5,6 +5,7 @@
         <title>Challenge: Fancy font families</title>
         <style>
         <!--Here's a list of generic font families: sans-serif, serif, fantasy, monospace, and cursive.-->
+        sans-serif, serif, fantasy, cursive, monospace
         body{
             font-family:serif;
         }
